...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="40dp"
        >

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/banner_register"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:alpha="0"
            app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
...
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/kogin_dialog"
            app:lottie_loop="true"
            tools:alpha="100" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:text="@string/login_title"
...
            android:text="@string/email_user"
            android:textColor="#4A4444"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView"
            android:alpha="0"
            tools:alpha= "100"
            android:labelFor="@id/emailEditText"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailEditTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...
            android:text="@string/your_password"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailEditTextLayout"
            android:alpha="0"
            tools:alpha= "100"
            android:labelFor="@id/passwordEditText"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordEditTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditTextLayout"
            android:orientation="vertical"
            >
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signInButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_button"
                android:textColor="@color/white"
                android:text="@string/sign_in"
                android:alpha="0"
...
