...
                app:subtitleCentered="true"
                app:title="@string/mystoryapp"
                app:titleCentered="true"
                app:titleTextColor="@color/black">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btn_logout"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="0dp"
                    android:background="@drawable/bg_button"
                    android:contentDescription="@string/app_logout"
...
                android:text="@string/welcome"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_welcome"
                android:text="@string/name_user"
                android:textColor="@color/black"
                android:textSize="18sp"
...
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_stories"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/title_container"
            android:layout_marginTop="16dp"
            android:paddingHorizontal="10dp"
            tools:listitem="@layout/item_story"/>
...
