...
        app:lottie_rawRes="@raw/error_msg"
        app:lottie_autoPlay="true"
        app:lottie_loop="false"
        />

    <TextView
        android:id="@+id/tv_info_registrasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout_app"
        android:textAlignment="center"
        android:lineHeight="25sp"
        app:layout_constraintTop_toBottomOf="@id/banner_register"
...
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_info_registrasi"
        app:layout_constraintEnd_toStartOf="@id/btn_yes"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_yes"
        android:background="@drawable/bg_button"
...
